[package]
name = "ldpl"
version = "0.1.0"
authors = ["chris west <c@xvxx.io>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/xvxx/ldpl-rs"
keywords = ["ldpl", "language"]
exclude = [
    "img/*",
]

[[bin]]
name = "ldpl-rs"
path = "src/main.rs"

[dependencies]
pest = "2.0"
pest_derive = "2.0"