[package]
name = "ldpl"
version = "0.1.0"
authors = ["chris west <c@xvxx.io>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
description = "LDPL 4.4 compiler in Rust"
repository = "https://github.com/xvxx/ldpl-rs"
keywords = ["ldpl", "language", "compiler"]
exclude = [
    "img/*",
]

[[bin]]
name = "ldpl-rs"
path = "src/main.rs"

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
